--- a/hungry me/dish.html
+++ b/hungry me/dish.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Snacks</title>
+    <title>Dish</title>
     <link rel="icon" type="image/png" href="img.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=swap">
-    <link rel="stylesheet" href="snacks.css">
-    <script defer src="snacks.js"></script>
+    <link rel="stylesheet" href="dish.css">
+    <script defer src="dish.js"></script>
 </head>
 <body>
       
@@ -51,7 +51,7 @@
         <i class="fas fa-chevron-up"></i>
         </a>
         <div class="submenu">
-            <a href="snacks.html"> <span class="material-symbols-outlined">add_to_queue</span>Add Snacks </a>
+            <a href="add drinks.html"> <span class="material-symbols-outlined">add_to_queue</span>Add Snacks </a>
         </div>            
 
         <a href="#" 
@@ -81,11 +81,11 @@
     
 
     <section class="dashboard">
-            <h2>SNACKS</h2>
+            <h2>DISH</h2>
             <table>
                 <thead>
                     <tr>
-                        <th>Drink Name</th>
+                        <th>Dish Name</th>
                         <th>Category</th>
                         <th>Price</th>
                         <th>image</th>
@@ -94,10 +94,10 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Palabok with Iced Tea</td>
-                        <td>Snacks</td>
-                        <td>₱165</td>
-                        <td><img src="snaks.png" alt="Coca-Cola" height="60"></td>
+                        <td>Chicken with Rice</td>
+                        <td>Dish</td>
+                        <td>₱148</td>
+                        <td><img src="chicken.png" alt="Coca-Cola" height="60"></td>
                         <td class="actions">
                             <svg class="check-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#00B074" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M20 6L9 17l-5-5"></path>
